# ZipTag

./: .gitignore  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  ziptag-mockup.html
.github/workflows/: bump-version.yml  ci.yml  release.yml
docs/: UPDATER.md  architecture-overview.md  design.md
scripts/: bump-version.js  take-screenshots.js
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: nautilus-compress.sh  nautilus-extract.sh  ziptag-kde-service-menu.desktop
src-tauri/nsis/: hooks.nsi
src-tauri/src/: lib.rs  main.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx
src/lib/: archive.ts  updater.ts  utils.ts
src/store/: jobs.ts
