[package]
name = "ziptag"
version = "0.2.2"
description = "A fast, polished offline desktop archiver."
authors = ["Tahsan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ziptag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "8.6.0", features = ["aes-crypto"] }
walkdir = "2.5.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-dialog = "2.7.1"
sevenz-rust2 = { version = "0.21.0", features = ["compress", "aes256"] }
tar = "0.4.40"
flate2 = { version = "1.0.28", features = ["rust_backend"] }
xz2 = "0.1.7"
bzip2 = "0.4.4"
zstd = "0.13.0"
rar = "0.4.0"
hadris-iso = "1.1.2"
